overflow hidden fix for mobile v3

--- a/src/components/Portfolio/PortfolioContainer.scss
+++ b/src/components/Portfolio/PortfolioContainer.scss
@@ -36,5 +36,6 @@ $gridHeight: calc(100% / #{$rowNum} - #{$gap} * (#{$rowNum} - 1) / #{$rowNum});
     width: 90%;
     align-self: flex-start;
     margin-top: 10%;
+    overflow: hidden !important;
   }
 }
